fixed spacing issue with calendar and weekly schedule

--- a/src/styles/sassets/schedule.scss
+++ b/src/styles/sassets/schedule.scss
@@ -71,6 +71,7 @@ span {
     flex-direction: column;
     flex-wrap: wrap;
     padding: 10px;
+    margin-right: 20px;
 }
 
 .week-content-section {
